--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,15 @@
     <string name="ajuda">Ajuda</string>
     <string name="menu">Menu principal</string>
     <string name="sortir">Sortir</string>
+    <string name="_1">1</string>
+    <string name="_2">2</string>
+    <string name="_3">3</string>
+    <string name="_4">4</string>
+    <string name="_5">5</string>
+    <string name="_6">6</string>
+    <string name="_7">7</string>
+    <string name="_8">8</string>
+    <string name="_9">9</string>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="red">#ED1B26</color>
